--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-01  Roman Joost <roman@bromeco.de>
+
+        * de.po: updated german translation, fixed typos and misstranslated
+          strings spotted by Michael Schumacher
+        
 2004-07-01  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation.
