2004-07-04  Sven Neumann  <sven@gimp.org>
	* libgimpmodule/gimpmodule.[ch]: added gimp_module_register_enum(),
	a function to register an enum type for a GTypeModule.

	* modules/cdisplay_colorblind.c: use an object property for the
	color deficiency enum.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13829 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimpmodule/libgimpmodule-sections.txt: added new function
+	gimp_module_register_enum().
+
+	* libgimpmodule/tmpl/gimpmodule.sgml: regenerated.
+
 2004-06-21  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
