--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-07-04  Sven Neumann  <sven@gimp.org>
 
+	* libgimpmodule/gimpmodule.[ch]: added gimp_module_register_enum(),
+	a function to register an enum type for a GTypeModule.
+
+	* modules/cdisplay_colorblind.c: use an object property for the
+	color deficiency enum.
+
+2004-07-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/channel_mixer.c: don't attempt to store a
 	pointer to the last used filename in the plug-in parameter
 	struct. Fixes bug #145380.
