Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* plug-ins/gfig/gfig-dialog.[ch]:
	* plug-ins/gfig/gfig-style.[ch]:
	* plug-ins/gfig/notes.txt:       New files.
	* plug-ins/gfig/*.[ch]:  Complete reworking of the gfig plug-in.
	See 'notes.txt' for a summary of what has changed, and how to use
	it now.  Plenty of bugs have been  introduced, which will take a
	while to straighten out.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13831 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-04  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/gfig/gfig-dialog.[ch]:
+	* plug-ins/gfig/gfig-style.[ch]:
+	* plug-ins/gfig/notes.txt:       New files.
+	* plug-ins/gfig/*.[ch]:  Complete reworking of the gfig plug-in.  
+	See 'notes.txt' for a summary of what has changed, and how to use
+	it now.  Plenty of bugs have been  introduced, which will take a 
+	while to straighten out. 
+
 2004-07-04  Tor Lillqvist  <tml@iki.fi>
 
 	* app/core/gimpdrawable-equalize.c (gimp_drawable_equalize): Drop
