2004-07-05  Sven Neumann  <sven@gimp.org>
	* modules/cdisplay_proof.c: use object properties for the
	configurable values.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13836 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-05  Sven Neumann  <sven@gimp.org>
+
+	* modules/cdisplay_proof.c: use object properties for the
+	configurable values.
+
 2004-07-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpchannel.[ch]: added signal "color-changed" and emit
