--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-05  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gfig/gfig-dialog.c: don't g_free() a GdkPixbuf, it's an
+	object. Removed trailing whitespace.
+
+	* plug-ins/gfig/gfig-preview.c (draw_background): fixed declaration.
+
 2004-07-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpcolorizetool.c (gimp_colorize_tool_initialize):
