2004-07-05  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimptemplateview.c
	(gimp_template_view_tree_name_edited): removed unused local variables.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13841 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-05  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimptemplateview.c
+	(gimp_template_view_tree_name_edited): removed unused local variables.
+
 2004-07-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/gfig/gfig-dialog.c: don't g_free() a GdkPixbuf, it's an
