2004-07-05  Sven Neumann  <sven@gimp.org>
	* modules/Makefile.am: link all modules with libgimpmodule.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13845 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-05  Sven Neumann  <sven@gimp.org>
+
+	* modules/Makefile.am: link all modules with libgimpmodule.
+
 2004-07-05  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/common/dog.c: improved defaults.  use gimp_invert()
