2004-07-05  Sven Neumann  <sven@gimp.org>
	* libgimp/libgimp-docs.sgml: include gimpenums.xml and gimppaths.xml.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13846 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-05  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/libgimp-docs.sgml: include gimpenums.xml and gimppaths.xml.
+
 2004-07-04  Sven Neumann  <sven@gimp.org>
 
 	* libgimpmodule/libgimpmodule-sections.txt: added new function
