2004-07-05  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/Makefile.am (enum_headers): don't scan
	app/paint-funcs/paint-funcs-types.h for enums.

	* app/paint-funcs/paint-funcs-types.h: removed /*< pdb-skip >*/

	* app/core/core-types.h: reordered opaque typedefs to somehow
	match the categories in the comments.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13854 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-07-05  Michael Natterer  <mitch@gimp.org>
 
+	* tools/pdbgen/Makefile.am (enum_headers): don't scan
+	app/paint-funcs/paint-funcs-types.h for enums.
+
+	* app/paint-funcs/paint-funcs-types.h: removed /*< pdb-skip >*/
+
+	* app/core/core-types.h: reordered opaque typedefs to somehow
+	match the categories in the comments.
+
+2004-07-05  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/core-types.h: removed enum SizeType.
 
 	* app/text/text-enums.h: added it as enum GimpSizeType and added
