2004-07-05  Sven Neumann  <sven@gimp.org>
	* app/plug-in/plug-in-rc.c (plug_in_icon_deserialize): fixed a
	compiler warning.

	* plug-ins/common/dog.c: removed some redundant casts and other
	trivial cleanups.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13856 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-05  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/plug-in-rc.c (plug_in_icon_deserialize): fixed a
+	compiler warning.
+
+	* plug-ins/common/dog.c: removed some redundant casts and other
+	trivial cleanups.
+
 2004-07-06  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcontroller.h: removed #define
