--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-06  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-07-01  Sven Neumann  <sven@gimp.org>
 
 	* de.po: fixed a wrong translation.
