2004-07-06  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpvectorstreeview.c (gimp_vectors_tree_view_drag_svg):
	return the proper type.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13860 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-06  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpvectorstreeview.c (gimp_vectors_tree_view_drag_svg):
+	return the proper type.
+
 2004-07-06  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontainertreeview.c: connect to
