2004-07-06  Sven Neumann  <sven@gimp.org>
	* modules/Makefile.am (libcdisplay_proof_la_LIBADD): added back
	$(LCMS_LIBS) that I had accidentally removed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13861 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-06  Sven Neumann  <sven@gimp.org>
 
+	* modules/Makefile.am (libcdisplay_proof_la_LIBADD): added back
+	$(LCMS_LIBS) that I had accidentally removed.
+
+2004-07-06  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpvectorstreeview.c (gimp_vectors_tree_view_drag_svg):
 	return the proper type.
 
