--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpwidgets-utils.c (gimp_menu_position)
+	(gimp_button_menu_position): call gtk_menu_set_monitor() only
+	for GTK+ < 2.4.4 and added a #warning about it.
+
 2004-07-06  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/gimpressionist: applied patch from Shlomi Fish that
