--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-06  Sven Neumann  <sven@gimp.org>
+
+	* libgimpmodule/gimpmodule.c: comply with C99 aliasing rules.
+
 2004-07-06  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpwidgets-utils.c (gimp_menu_position)
