Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* plug-ins/gfig/*.[ch]:  a bunch of code clean-up and
	debugging.  Created "classes" for the objects, and
	attached functions to classes rather than objects.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13867 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-06  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/gfig/*.[ch]:  a bunch of code clean-up and 
+	debugging.  Created "classes" for the objects, and
+	attached functions to classes rather than objects.
+
 2004-07-06  Sven Neumann  <sven@gimp.org>
 
 	Added an RGB histogram based on a patch by Tor Lillqvist. Fixes
