2004-07-07  Michael Natterer  <mitch@gimp.org>
	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]: added actions and callbacks for
	scrolling the view. Not used in menus but useful for controllers.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13869 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/view-actions.c
+	* app/actions/view-commands.[ch]: added actions and callbacks for
+	scrolling the view. Not used in menus but useful for controllers.
+
 2004-07-07  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpeditselectiontool.c
