2004-07-07  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphistogramview.c (gimp_histogram_view_expose):
	fixed a drawing bug I introduced earlier today.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13870 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-07  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphistogramview.c (gimp_histogram_view_expose):
+	fixed a drawing bug I introduced earlier today.
+
 2004-07-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/view-actions.c
