2004-07-07  Michael Natterer  <mitch@gimp.org>
	* app/actions/edit-actions.c (edit_actions): added "..." to "Clear
	undo history" because it has a confirmation dialog.

	* app/actions/edit-commands.c: cleanup: moved static functions to
	the end of the file and prototyped them.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13871 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/actions/edit-actions.c (edit_actions): added "..." to "Clear
+	undo history" because it has a confirmation dialog.
+
+	* app/actions/edit-commands.c: cleanup: moved static functions to
+	the end of the file and prototyped them.
+
 2004-07-07  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimphistogramview.c (gimp_histogram_view_expose):
