2004-07-07  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/jpeg.c: Don't try to load EXIF data if any warnings
        happened, cause that likely means corruption and libexif doesn't
        handle that very happily. Addresses bug #145212. Perhaps the error and
        warning messages should be propagated to the user in the GUI somehow,
        currently they are not.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13873 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-07  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/jpeg.c: Don't try to load EXIF data if any warnings
+	happened, cause that likely means corruption and libexif doesn't
+	handle that very happily. Addresses bug #145212. Perhaps the error and
+	warning messages should be propagated to the user in the GUI somehow,
+	currently they are not.
+
 2004-07-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/edit-actions.c (edit_actions): added "..." to "Clear
