2004-07-07  Michael Natterer  <mitch@gimp.org>
	* app/gui/Makefile.am
	* app/gui/clipboard.[ch]: removed...

	* app/widgets/Makefile.am
	* app/widgets/gimpclipboard.[ch]: ...and added here.

	* app/actions/edit-commands.c
	* app/gui/gui.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13876 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-07-07  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/Makefile.am
+	* app/gui/clipboard.[ch]: removed...
+
+	* app/widgets/Makefile.am
+	* app/widgets/gimpclipboard.[ch]: ...and added here.
+
+	* app/actions/edit-commands.c
+	* app/gui/gui.c: changed accordingly.
+
+2004-07-07  Michael Natterer  <mitch@gimp.org>
+
 	Made the undo system robust against the currently pushed undo
 	being too large according to prefs settings. Fixes bug #145379.
 
