--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-07  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimplayer.c (gimp_layer_new_from_tiles): add an alpha
+	channel if the src tile-manager doesn't have one. Warn on
+	unsupported type conversions instead of silently doing the wrong
+	thing. Fixes bug #145482.
+
+	* app/core/gimpbuffer.c: cosmetics.
+ 
 2004-07-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/Makefile.am
