2004-07-07  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpclipboard.[ch]: changed to allow pasting any
	GdkPixbuf supported format (makes pasting from OpenOffice
	work). Cleaned up a bit to perpare pasting of SVG data.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13879 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpclipboard.[ch]: changed to allow pasting any
+	GdkPixbuf supported format (makes pasting from OpenOffice
+	work). Cleaned up a bit to perpare pasting of SVG data.
+
 2004-07-07  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimplayer.c (gimp_layer_new_from_tiles): add an alpha
