Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* plug-ins/gfig/*.[ch]: Use single centralized functions to
	create, load, and save objects, instead of separate functions
	for each type of object. A few other miscellaneous fixes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13880 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-07  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* plug-ins/gfig/*.[ch]: Use single centralized functions to
+	create, load, and save objects, instead of separate functions
+	for each type of object. A few other miscellaneous fixes.
+
 2004-07-07  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpclipboard.[ch]: changed to allow pasting any
