2004-07-07  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpclipboard.c: sort the list of pixbuf formats so
	that PNG is the preferred format and GIF and JPEG come last.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13881 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-07  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpclipboard.c: sort the list of pixbuf formats so
+	that PNG is the preferred format and GIF and JPEG come last.
+
 2004-07-07  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/gfig/*.[ch]: Use single centralized functions to
