2004-07-08  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimppropwidgets.c (gimp_prop_enum_combo_box_notify):
	block gimp_prop_enum_combo_box_callback() before changing the
	combo-box.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13888 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-08  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimppropwidgets.c (gimp_prop_enum_combo_box_notify):
+	block gimp_prop_enum_combo_box_callback() before changing the
+	combo-box.
+
+2004-07-08  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpsessioninfo.c: only write aux-info for properties
 	that have been changed from their default values.
 
