--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-08  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimppropwidgets.c (gimp_prop_boolean_combo_box_notify):
+	same fix as below.
+
 2004-07-08  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimppropwidgets.c (gimp_prop_enum_combo_box_notify):
