--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-08  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphistogrameditor.c
+	(gimp_histogram_editor_menu_update): set the active item of the
+	combo-box after changing the visibility filter.
+
 2004-07-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimppropwidgets.c (gimp_prop_boolean_combo_box_notify):
