Added the change log entry that was not added in my last commit. Removed a file that should not be in the CVS.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13895 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-08  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist: Various Gimpressionist Cleanups. Made most 
+	remaining non-static global variables static, and created functions 
+	that manipulate them. Created new headers. Renamed some variables and 
+	functions to make their names more menanigful.
+
 2004-07-08  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimphistogrameditor.c
